--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.4.1",
+    "dotenv-expand": "^10.0.0",
     "gh-pages": "^5.0.0",
     "tailwindcss": "^3.3.3"
   }
